--- a/estilos.css
+++ b/estilos.css
@@ -1,15 +1,19 @@
 body{
-    background-color: black;
+    background-color:#1e1f20;
 }
 
 h1, h2 {
     color: white;
 }
 
-p {
+p, ul, li {
     color: white;
 }
 
 a{
     text-align: center;
+}
+
+img src {
+    width: 50px; height: 50px;
 }
