--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;500&display=swap');
+
 body{
     background-color:#1e1f20;
+    font-family: 'Kaisei HarunoUmi', serif;
 }
 
 h1, h2 {
@@ -13,6 +16,3 @@ p, ul, li {
 a{
     text-align: center;
 }
-
-img { 
-    width: 180px; }
