Agregar nuevo stilo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ body.portada {
     text-align: center;
 }
 
-body.esta_soy_yo {
+body.quien_soy {
     text-decoration-color: black; 
     font-family: 'Kaisei HarunoUmi', serif;    
 }
