Cambios de nombre en los contenedores por clases y agregar una imagen

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,79 +4,23 @@
 body{
     background: url(../imagenes/portada-bajo-volumen.jpg); 
 }
-
-.contenedor-1 h1 i {
+h1, h2, p, li {
     font-family: 'Kaisei HarunoUmi', serif;
     text-align: center;
     color:white;
-    line-height: 600px;
-}
-body.quien_soy {
-
 }
 
-i {
-    color: white;
-}
-.contenerdor2 {
-    text-decoration-color: black; 
-    font-family: 'Kaisei HarunoUmi', serif;    
-}
-.contenedor-2 h1 p {
-font-family: 'Kaisei HarunoUmi', serif;
-text-align: center;
-color:white;
-line-height: 600px;
-}
-.contenedor-3 h1 h2{
-    font-family: 'Kaisei HarunoUmi',
-    serif;
-    text-align: center;
-    color:white;
-    line-height: 600px;
-}
-
-.contenedor-4 h1 p {
-font-family: 'Kaisei HarunoUmi',
-serif;
-text-align: center;
-color:white;
-line-height: 600px;
-
-}
-
-.contenedor-5 h1 li{
-    font-family: 'Kaisei HarunoUmi',
-    serif;
-    text-align: center;
-    color:white;
-    line-height: 600px;
-}
-.contenedor-6 h1 p {
-    font-family: 'Kaisei HarunoUmi',
-    serif;
-    text-align: center;
-    color:white;
-    line-height: 600px;
-
-}
-.contenedor-7 h1 p {
-    
-}
-.contenedor-8 h1 {
-    
-
-}
 img {
-    width:300px;
     height:auto;
     display: block;
     margin: auto;
-    border-radius: 50%;
+    border-radius: 60%;
 }
 
 i {
     color: white;
+    text-align: center;
+
 }
 
 a {
@@ -89,11 +33,72 @@ text-align: center;
 color: white;
 }
 
-#quien_soy{
+.la-class-1_quien_soy h1 i {
+    font-family: 'Kaisei HarunoUmi', serif;
     text-align: center;
+    color:white;
+}
+.la-class-2_unica h1 p{
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-3_yo h1 p{
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-4_feliz h1 li{
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-5_enojada {
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-6_personalidad h1{
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-7_multiple h1 {
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-8_virtudes{
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-9_frase h1{
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-10_metas_corto h1 h2 p li {
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-11_metas_mediano h1 h2 p li{
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-12_metas_largo h1 h2 p li {
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
+}
+.la-class-13_agradecimiento h1 p {
+    font-family: 'Kaisei HarunoUmi', serif;
+    text-align: center;
+    color:white;
 }
 
-h1, h2, p, li{
-    color: white;
-}
+
+
 
